bug fix the FDC fix